--- a/posts/2017-02-22-vue-cli 2.8.1 项目源码结构分析.md
+++ b/posts/2017-02-22-vue-cli 2.8.1 项目源码结构分析.md
@@ -7,8 +7,8 @@ vue-cli 2.8.1 已经支持 webpack 2.2
 
 ## 项目结构
 
-```
-+-- build
+``` bash
+|-- build
 |   |-- build.js
 |   |-- check-versions.js
 |   |-- dev-client.js
@@ -18,20 +18,20 @@ vue-cli 2.8.1 已经支持 webpack 2.2
 |   |-- webpack.base.conf.js
 |   |-- webpack.dev-conf.js
 |   |-- webpack.prod.conf.js
-+-- config
+|-- config
 |   |-- dev.env.js
 |   |-- index.js
 |   |-- prod.env.js
-+-- src
-|   +-- assets
+|-- src
+|   |-- assets
 |   |   |--logo.png
-|   +-- components
+|   |-- components
 |   |   |--Hello.vue
-|   +-- router
+|   |-- router
 |   |   |--index.js
 |   |-- App.vue
 |   |-- main.js
-+-- static
+|-- static
 |   |-- .gitkeep
 |-- .babelrc
 |-- .editorconfig
